    o #692428 by Roi Danton: Documentation typo fix.
  
  Other changes:
    o #570558 by yhahn: Segment default views caching to conserve memory used by Views during normal operation.
    o #661676 by dagmar: Improve error handling during AJAX failures.
    o #685622 by dereine: Field to provide link to a node revision.

Views 2.8 (Dec 02, 2009)
  Bug fixes:
    o #622602: Missing ORDER BY in some views with tables due to incorrect test for default table sorting.
    o #623498 by marcp: total_rows should be filled in if fetching all records.
    o #535206: Attachment displays repeat exposed filters because exposed filters were left hanging around during cloning.
    o #450346 by lefnire: Inherit Exposed Filters sometimes hides part of the parent exposed filters
    o #550560 by donquixote: Fix unterminated string in views.help.ini that breaks under php 5.3
    o #592476 by Garrett Albright: Remove redundant CSS from views-list.css
    o #366250 by Markus Petrux: Fix glitches with tabledrag and jQuery 1.3.
    o #581616 by cangeceiro: Defend text color from themes in Views UI.
    o #589484 by Markus Petrux: External styles could not properly provide advanced help files.
    o #494490 by Niels Hackius: User picture incorrectly set as an inline element when it should be block.
    o #616956 by neochief: Exposed form labels should have "for" keyword.
    o #620046 by cedric: Date validate handler does not fallback properly causing sporadic improper validation.
    o #628330 by dereine: Do not print n/a for empty formatted fields.
    o #515564: Views UI would fail to rearrange with > 25 fields.
    o #452384: Fix PHP 5.3 compatibility.
    o #619884: Fix incorrect grouping for styles other than table.
    o #539498: "Comments: Node link" did not work at all. Replaced with "Node: Add comment link" which is what that was supposed to do.
    o #638916 by dereine: views.help.ini strings need quoting to continue to work in PHP 5.3